--- a/index.html
+++ b/index.html
@@ -20,15 +20,22 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/pokedexIndividual.css">
 </head>
 
 <body>
+
+   
+
+  
     <section class="content">
+      
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
+        
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
@@ -37,10 +44,11 @@
         </div>
     </section>
 
+
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script  src="/assets/js/pokemon-model.js"></script>
+    <script  src="/assets/js/poke-api.js"></script>
+    <script  src="/assets/js/main.js"></script>
 </body>
 
 </html>
